dataset-inspect: fix dataset sometimes not being visible

--- a/public/js/components/Datasets/Datasets.sass
+++ b/public/js/components/Datasets/Datasets.sass
@@ -86,6 +86,7 @@
     flex-direction: column
     flex-grow: 1
     max-height: 100%
+    height: 100%
     min-width: 100%
 
 .headerRowTable, .dataRowsTable
